fixed intro about p tag to text align center

--- a/src/scss/sections/intro/_introTexts.scss
+++ b/src/scss/sections/intro/_introTexts.scss
@@ -61,6 +61,7 @@
         display: flex;
         flex-wrap: wrap;
         margin: 0.5rem;
+        text-align: center;
     }
 
     @keyframes bounce {
